# cyphr-demo

./: .gitignore  404.html  Anchor.toml  FRONTEND-INTEGRATION-GUIDE.md  LICENSE  README.md  TEST_RESULTS_SUMMARY.md  build.sh  comprehensive-devnet-test.js  deploy-to-devnet.sh  index.html  package-lock.json  package.json  test-deployed-contracts.js  test-integration.js  test-real-transaction.js  test-wallet-integration.js  test-wallet-setup.js  vite.config.ts
assets/: index-BASagVMC.js  index-BASagVMC.js.map  index-BEHb0Rce.js.map  index-BsZpsrJp.js  index-BsZpsrJp.js.map  index-CNWxSUVk.css  index-CyMiEdZn.js  index-CyMiEdZn.js.map  index-DPr6RmFH.js.map  index-ESdN5Oap.js.map
config/: simple-test-program.rs  tsconfig.json  vite.config.ts
cyphr-app/: package-lock.json  vite.config.ts
demo-website/: CNAME  build.sh  index.html
docs/: 404.html  DEPLOYMENT-READY.md  DEVENET_TESTING_GUIDE.md  FINAL-CONVERSION-SUMMARY.md  README.md  WALLET_INTEGRATION_GUIDE.md  index-BB69kfR7.js  index-B_crfFd4.css  index-DPr6RmFH.js  index-DtKxbfB8.css  index.html
programs/cyphr-vaults/: Cargo.toml
programs/cyphr-vaults/src/: basic_vault.rs  errors.rs  lib.rs  state.rs  strategy_vault.rs
public/: index-B7IAl2No.js.map  index-BB69kfR7.js.map  index-BlhY86Ob.css  index-CAkKhwBB.js  index-CAkKhwBB.js.map  index-CkC4VYb6.css  index-DlbyM_WA.js  index-DlbyM_WA.js.map  index-x3gW2vvc.css
scripts/: deploy-vault.sh  simple-devnet-test.js  test-core-functionality.js
smart-contracts/: DEPLOYED-CONTRACTS-SUMMARY.md  FINAL-VALIDATION-REPORT.md  PRODUCTION-READY-DEMO.md  README.md  (+5 more)
(+334 files in other folders)
